Enforce policy before request validation
Removed *vexpose* custom decorator to avoid request
body validation before policy enforcement

Change-Id: Ic03fc8caef8c6efee906222c35a6cce1c25ca95b
Closes-bug: #1423588

--- a/gnocchi/tests/gabbi/gabbits/base.yaml
+++ b/gnocchi/tests/gabbi/gabbits/base.yaml
@@ -32,6 +32,18 @@ tests:
       $.definition.[0].points: 20
       $.definition.[0].timespan: 0:20:00
 
+- name: post archive policy no auth
+  desc: this confirms that auth handling comes before data validation
+  url: /v1/archive_policy
+  method: POST
+  request_headers:
+      content-type: application/json
+  data:
+      definition:
+          - granularity: 1 second
+            points: 20
+  status: 403
+
 - name: post metric with archive policy
   url: /v1/metric
   request_headers:
