Add ipmi resource
That patch adds ipmi resource into gnocchi

Change-Id: I2859410f3dc9211d49b59be984a1ac46a481c24e

--- a/setup.cfg
+++ b/setup.cfg
@@ -36,6 +36,7 @@ gnocchi.indexer.resources =
     ceph_account = gnocchi.ceilometer.resources.ceph_account:CephAccountSQLAlchemy
     network = gnocchi.ceilometer.resources.network:NetworkSQLAlchemy
     identity = gnocchi.ceilometer.resources.identity:IdentitySQLAlchemy
+    ipmi = gnocchi.ceilometer.resources.ipmi:IPMISQLAlchemy
 
 gnocchi.storage =
     null = gnocchi.storage.null:NullStorage
@@ -72,6 +73,7 @@ gnocchi.ceilometer.resource =
     ceph_account = gnocchi.ceilometer.resources.ceph_account:CephAccount
     network = gnocchi.ceilometer.resources.network:Network
     identity = gnocchi.ceilometer.resources.identity:Identity
+    ipmi = gnocchi.ceilometer.resources.ipmi:IPMI
 
 [build_sphinx]
 all_files = 1
