Add 'stack' resource
That patch adds stack resource into gnocchi

Change-Id: Ie448150484d63dc41f70fcceca54566efa1a4e95

--- a/setup.cfg
+++ b/setup.cfg
@@ -37,6 +37,7 @@ gnocchi.indexer.resources =
     network = gnocchi.ceilometer.resources.network:NetworkSQLAlchemy
     identity = gnocchi.ceilometer.resources.identity:IdentitySQLAlchemy
     ipmi = gnocchi.ceilometer.resources.ipmi:IPMISQLAlchemy
+    stack = gnocchi.ceilometer.resources.orchestration:StackSQLAlchemy
 
 gnocchi.storage =
     null = gnocchi.storage.null:NullStorage
@@ -74,6 +75,7 @@ gnocchi.ceilometer.resource =
     network = gnocchi.ceilometer.resources.network:Network
     identity = gnocchi.ceilometer.resources.identity:Identity
     ipmi = gnocchi.ceilometer.resources.ipmi:IPMI
+    stack = gnocchi.ceilometer.resources.orchestration:Stack
 
 [build_sphinx]
 all_files = 1
