--- a/setup.cfg
+++ b/setup.cfg
@@ -1,11 +1,11 @@
 [metadata]
 name = gnocchi
-version = 2014.2
-summary = Metric Storage
+url = http://launchpad.net/gnocchi
+summary = Metric as a Service
 description-file =
     README.rst
-author = Julien Danjou
-author-email = julien@danjou.info
+author = OpenStack
+author-email = openstack-dev@lists.openstack.org
 classifier =
     Environment :: OpenStack
     Intended Audience :: Information Technology
@@ -16,7 +16,7 @@ classifier =
     Programming Language :: Python :: 2
     Programming Language :: Python :: 2.6
     Programming Language :: Python :: 2.7
-    Programming Language :: Python :: 3.3
+    Programming Language :: Python :: 3.4
     Topic :: System :: Monitoring
 
 [global]
