Add 'image' resource support
'Image' resource support is added to resources
with the following attributes:
- name
- container_format
- disk_format

Supported metrics:
- image
- image.size

Tests added to test_rest.py

Change-Id: I14bfbffd686299c5141a49d34cfa191e2dd99f0c

--- a/setup.cfg
+++ b/setup.cfg
@@ -38,6 +38,7 @@ gnocchi.indexer.resources =
     identity = gnocchi.ceilometer.resources.identity:IdentitySQLAlchemy
     ipmi = gnocchi.ceilometer.resources.ipmi:IPMISQLAlchemy
     stack = gnocchi.ceilometer.resources.orchestration:StackSQLAlchemy
+    image = gnocchi.ceilometer.resources.image:ImageSQLAlchemy
 
 gnocchi.storage =
     null = gnocchi.storage.null:NullStorage
@@ -76,6 +77,7 @@ gnocchi.ceilometer.resource =
     identity = gnocchi.ceilometer.resources.identity:Identity
     ipmi = gnocchi.ceilometer.resources.ipmi:IPMI
     stack = gnocchi.ceilometer.resources.orchestration:Stack
+    image = gnocchi.ceilometer.resources.image:Image
 
 [build_sphinx]
 all_files = 1
