rest: allow to search for metric value
This adds a new REST API endpoint that allows to search for certain
values in a list of metric. It can be used to detect threshold or things
like that efficiently in multiple metrics at once without downloading
their measures.

Change-Id: I10cc41d87a3d54ba9a03a8bd1ed92671618053c4

--- a/doc/source/rest.yaml
+++ b/doc/source/rest.yaml
@@ -111,6 +111,13 @@
       }
     ]
 
+- name: search-value-in-metric
+  request: |
+    POST /v1/search/metric?metric_id={{ scenarios['create-metric']['response'].json['id'] }} HTTP/1.1
+    Content-Type: application/json
+
+    {"and": [{">=": [{"+": 23}, 50]}, {"!=": 55}]}
+
 - name: get-measures
   request: GET /v1/metric/{{ scenarios['create-metric']['response'].json['id'] }}/measures HTTP/1.1
 
