--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,10 @@
 numpy
-oslo.config>=1.4.0.0a1
-oslo.db>=0.5.0
-oslo.log
+oslo.config<1.10.0,>=1.9.3
+oslo.db<1.8.0,>=1.7.0
+oslo.log<1.1.0,>=1.0.0
 oslo.policy>=0.3.0
-oslo.serialization>=1.0.0
-oslo.utils>=0.3.0
+oslo.serialization<1.5.0,>=1.4.0
+oslo.utils<1.5.0,>=1.4.0
 oslosphinx>=2.2.0  # Apache-2.0
 pandas
 pecan!=0.8
