rest: enhance metric retrieval in controllers
This fetch the metric information earlier in the API, so it avoids doing
more than one request on the indexer to retrieve a metric info. The
upside is that we detect also non existent metric earlier.

The downside is that we have to fetch the details of a metric (i.e. the
archive policy detail) on each call because most controllers except to
have this details near them. That shouldn't be a large issue, it ends up
simplifying the API a bit since you don't have to explicitely request
the details of a metric anymore.

Change-Id: If0af07fdb83b05e6172141ebc4687cf4de7e51c9

--- a/gnocchi/tests/gabbi/gabbits/base.yaml
+++ b/gnocchi/tests/gabbi/gabbits/base.yaml
@@ -70,7 +70,7 @@ tests:
       content_type: /application\/json/
       x-roles: admin
   response_json_paths:
-      $.archive_policy_name: test1
+      $.archive_policy.name: test1
       $.created_by_user_id: 93180da9-7c15-40d3-a050-a374551e52ee
       $.created_by_project_id: 99d13f22-3618-4288-82b8-6512ded77e4f
 
