--- a/setup.cfg
+++ b/setup.cfg
@@ -40,6 +40,18 @@ gnocchi.indexer.resources =
     stack = gnocchi.ceilometer.resources.orchestration:StackSQLAlchemy
     image = gnocchi.ceilometer.resources.image:ImageSQLAlchemy
 
+gnocchi.controller.resources =
+    generic = gnocchi.rest:GenericResourcesController
+    instance = gnocchi.rest:InstancesResourcesController
+    swift_account = gnocchi.rest:SwiftAccountsResourcesController
+    volume = gnocchi.rest:VolumesResourcesController
+    ceph_account = gnocchi.rest:CephAccountsResourcesController
+    network = gnocchi.rest:NetworkResourcesController
+    identity = gnocchi.rest:IdentityResourcesController
+    ipmi = gnocchi.rest:IPMIResourcesController
+    stack = gnocchi.rest:StackResourcesController
+    image = gnocchi.rest:ImageResourcesController
+
 gnocchi.storage =
     null = gnocchi.storage.null:NullStorage
     swift = gnocchi.storage.swift:SwiftStorage
