Update resource.yaml to reflect recent fixes
Some bugs were fixed in previous commits with how data is presented at /
and /v1/resource but the xfail-ing tests in resource.yaml didn't get
fixed up because they were still failing (instead of becoming unexpected
success) because of the structure of the tests. We'll want to keep this
in mind when creating future xfails.

Change-Id: I7e301d3a97099480edd4ed13709c5865cd8b4929

--- a/gnocchi/tests/gabbi/gabbits/resource.yaml
+++ b/gnocchi/tests/gabbi/gabbits/resource.yaml
@@ -31,11 +31,11 @@ tests:
 # xfails.
 
     - name: root of all
-      desc: https://bugs.launchpad.net/gnocchi/+bug/1423986
       url: /
-      xfail: true
       response_headers:
-          content-type: application/json-home
+          content-type: /application/json/
+      response_json_paths:
+          $.versions[0].links[0].href: $SCHEME://$NETLOC/v1/
 
     - name: root of v1
       desc: https://bugs.launchpad.net/gnocchi/+bug/1424627
@@ -45,11 +45,15 @@ tests:
           - some hypermedia
 
     - name: root of resource
-      desc: https://bugs.launchpad.net/gnocchi/+bug/1423990
-      xfail: true
       url: /v1/resource
-      response_strings:
-          - something useful here
+      status: 302
+      response_headers:
+          location: $SCHEME://$NETLOC/v1/resource/
+
+    - name: root of resource slashed
+      url: $LOCATION
+      response_json_paths:
+          $.volume: $SCHEME://$NETLOC/v1/resource/volume
 
 # Explore that GETting a list of resources demonstrates the expected
 # behaviors notably with regard to content negotiation.
