Keep history of updated resource attributes
This change keeps history of updated resource attributes
by creating a new row in resource_history tables each time the
resource table is updated.

Each resource extension table also gains a '<resource_name>_history' to
track its history too.

Change-Id: If532b5167f0bbecb94f15594f0227c537ed26f77

--- a/setup.cfg
+++ b/setup.cfg
@@ -31,13 +31,13 @@ packages =
 gnocchi.indexer.resources =
     generic = gnocchi.indexer.sqlalchemy_base:Resource
     instance = gnocchi.ceilometer.resources.instance:InstanceSQLAlchemy
-    swift_account = gnocchi.ceilometer.resources.swift_account:SwiftAccountSQLAlchemy
+    swift_account = gnocchi.indexer.sqlalchemy_base:ResourceExt
     volume = gnocchi.ceilometer.resources.volume:VolumeSQLAlchemy
-    ceph_account = gnocchi.ceilometer.resources.ceph_account:CephAccountSQLAlchemy
-    network = gnocchi.ceilometer.resources.network:NetworkSQLAlchemy
-    identity = gnocchi.ceilometer.resources.identity:IdentitySQLAlchemy
-    ipmi = gnocchi.ceilometer.resources.ipmi:IPMISQLAlchemy
-    stack = gnocchi.ceilometer.resources.orchestration:StackSQLAlchemy
+    ceph_account = gnocchi.indexer.sqlalchemy_base:ResourceExt
+    network = gnocchi.indexer.sqlalchemy_base:ResourceExt
+    identity = gnocchi.indexer.sqlalchemy_base:ResourceExt
+    ipmi = gnocchi.indexer.sqlalchemy_base:ResourceExt
+    stack = gnocchi.indexer.sqlalchemy_base:ResourceExt
     image = gnocchi.ceilometer.resources.image:ImageSQLAlchemy
 
 gnocchi.controller.resources =
