--- a/doc/source/rest.yaml
+++ b/doc/source/rest.yaml
@@ -196,12 +196,62 @@
 - name: get-resource-generic
   request: GET /v1/resource/generic/{{ scenarios['create-resource-generic']['response'].json['id'] }} HTTP/1.1
 
+- name: get-instance
+  request: GET /v1/resource/instance/{{ scenarios['create-resource-instance']['response'].json['id'] }} HTTP/1.1
+
+- name: create-resource-instance-bis
+  request: |
+    POST /v1/resource/instance HTTP/1.1
+    Content-Type: application/json
+
+    {
+      "id": "AB0B5802-E79B-4C84-8998-9237F60D9CAE",
+      "user_id": "BD3A1E52-1C62-44CB-BF04-660BD88CD74D",
+      "project_id": "BD3A1E52-1C62-44CB-BF04-660BD88CD74D",
+      "flavor_id": 2,
+      "image_ref": "http://image",
+      "host": "compute1",
+      "display_name": "myvm",
+      "metrics": {}
+    }
+
 - name: patch-resource
   request: |
     PATCH /v1/resource/instance/{{ scenarios['create-resource-instance']['response'].json['id'] }} HTTP/1.1
     Content-Type: application/json
 
     {"host": "compute2"}
+
+- name: get-patched-instance
+  request: GET /v1/resource/instance/{{ scenarios['create-resource-instance']['response'].json['id'] }} HTTP/1.1
+
+- name: search-resource-history
+  request: |
+    POST /v1/search/resource/instance?history=true HTTP/1.1
+    Content-Type: application/json
+
+    {"=": {"id": "{{ scenarios['create-resource-instance']['response'].json['id'] }}"}}
+
+- name: search-resource-history-in-accept
+  request: |
+    POST /v1/search/resource/instance HTTP/1.1
+    Content-Type: application/json
+    Accept: application/json; history=true
+
+    {"=": {"id": "{{ scenarios['create-resource-instance']['response'].json['id'] }}"}}
+
+- name: search-resource-history-partial
+  request: |
+    POST /v1/search/resource/instance HTTP/1.1
+    Content-Type: application/json
+    Accept: application/json; history=true
+
+    {"and": [
+        {"=": {"host": "compute1"}},
+        {">=": {"revision_start": "{{ scenarios['get-instance']['response'].json['revision_start'] }}"}},
+        {"or": [{"<=": {"revision_end": "{{ scenarios['get-patched-instance']['response'].json['revision_start'] }}"}},
+            {"=": {"revision_end": null}}]}
+    ]}
 
 - name: delete-resource-generic
   request: DELETE /v1/resource/generic/{{ scenarios['create-resource-generic']['response'].json['id'] }} HTTP/1.1
