--- a/gnocchi/tests/gabbi/gabbits/history.yaml
+++ b/gnocchi/tests/gabbi/gabbits/history.yaml
@@ -40,7 +40,10 @@ tests:
           content-type: application/json
       data:
           user_id: f53c58a4-fdea-4c09-aac4-02135900be67
-      status: 204
+      status: 200
+      response_json_paths:
+          user_id: f53c58a4-fdea-4c09-aac4-02135900be67
+          project_id: f3d41b77-0cc1-4f0b-b94a-1d5be9c0e3ea
 
     - name: patch resource project_id
       url: /v1/resource/generic/f93450f2-d8a5-4d67-9985-02511241e7d1
@@ -51,7 +54,10 @@ tests:
           content-type: application/json
       data:
           project_id: fe20a931-1012-4cc6-addc-39556ec60907
-      status: 204
+      status: 200
+      response_json_paths:
+          user_id: f53c58a4-fdea-4c09-aac4-02135900be67
+          project_id: fe20a931-1012-4cc6-addc-39556ec60907
 
 # List resources
 
