--- a/devstack/apache-gnocchi.template
+++ b/devstack/apache-gnocchi.template
@@ -1,13 +1,16 @@
 Listen %GNOCCHI_PORT%
+
 <VirtualHost *:%GNOCCHI_PORT%>
     WSGIDaemonProcess gnocchi user=%USER% display-name=%{GROUP} processes=2 threads=10.
-    WSGIScriptAlias / %WSGI%
     WSGIProcessGroup gnocchi
+    WSGIScriptAlias / %WSGI%
     WSGIApplicationGroup %{GLOBAL}
-
-
+    <IfVersion >= 2.4>
+        ErrorLogFormat "%{cu}t %M"
+    </IfVersion>
     ErrorLog /var/log/%APACHE_NAME%/gnocchi.log
     CustomLog /var/log/%APACHE_NAME%/gnocchi-access.log combined
 
 </VirtualHost>
 
+WSGISocketPrefix /var/run/%APACHE_NAME%
