--- a/gnocchi/tests/gabbi/gabbits/metric.yaml
+++ b/gnocchi/tests/gabbi/gabbits/metric.yaml
@@ -47,7 +47,8 @@ tests:
           name: "disk.io.rate"
       status: 201
       response_json_paths:
-          $.archive_policy_name: cookies
+          $.archive_policy.name: cookies
+          $.name: disk.io.rate
 
     - name: create metric with name no rule
       url: /v1/metric
@@ -87,7 +88,7 @@ tests:
           archive_policy_name: cookies
       status: 201
       response_json_paths:
-          $.archive_policy_name: cookies
+          $.archive_policy.name: cookies
 
     - name: get valid metric id
       url: /v1/metric/$RESPONSE['$.id']
