Include Ceilometer dispatcher YAML file in tarball
Currently we miss it in the final tarball.

Change-Id: I759485633a3761617e2c01375d7e2949db7d42e2

--- a/setup.cfg
+++ b/setup.cfg
@@ -19,6 +19,9 @@ classifier =
     Programming Language :: Python :: 3.4
     Topic :: System :: Monitoring
 
+data_files =
+    etc/ceilometer = etc/ceilometer/*
+
 [global]
 setup-hooks =
     pbr.hooks.setup_hook
