--- a/doc/source/rest.yaml
+++ b/doc/source/rest.yaml
@@ -167,6 +167,18 @@
       "project_id": "BD3A1E52-1C62-44CB-BF04-660BD88CD74D"
     }
 
+- name: create-resource-with-new-metrics
+  request: |
+    POST /v1/resource/generic HTTP/1.1
+    Content-Type: application/json
+
+    {
+      "id": "AB68DA77-FA82-4E67-ABA9-270C5A98CBCB",
+      "user_id": "BD3A1E52-1C62-44CB-BF04-660BD88CD74D",
+      "project_id": "BD3A1E52-1C62-44CB-BF04-660BD88CD74D",
+      "metrics": {"temperature": {"archive_policy_name": "low"}}
+    }
+
 - name: create-resource-instance
   request: |
     POST /v1/resource/instance HTTP/1.1
