Remove version constraints for oslo.db dependency
ForeignKey Exception in oslo.db was printed in stderr, creating
a wrong alarming situation.

This as been fixed in oslo.db 1.8.0

Change-Id: I3c45adbde6c7445be4cbb765af07e6ad55f1afe3
Closes-Bug: #1439358

--- a/requirements-py3.txt
+++ b/requirements-py3.txt
@@ -1,6 +1,6 @@
 numpy
 oslo.config<1.10.0,>=1.9.3
-oslo.db<1.8.0,>=1.7.0
+oslo.db>=1.8.0
 oslo.log<1.1.0,>=1.0.0
 oslo.policy>=0.3.0
 oslo.serialization<1.5.0,>=1.4.0
