Generate configuration file in default tox target
This makes sure that it works and is tested.

Change-Id: Iad6d5b4ef5db9f2e2709a954dd7d0a19d7adf1ed

--- a/tox.ini
+++ b/tox.ini
@@ -23,6 +23,7 @@ commands = flake8
 commands =
   doc8 --ignore-path doc/source/rest.rst doc/source
   {toxinidir}/run-tests.sh "postgresql mysql" "file swift ceph" {posargs}
+  {toxinidir}/generate-config-file.sh
 
 [testenv:py34]
 deps = -r{toxinidir}/requirements.txt
@@ -104,13 +105,7 @@ exclude = .tox,doc
 show-source = true
 
 [testenv:genconfig]
-commands = mkdir -p etc/gnocchi
-           oslo-config-generator --output-file etc/gnocchi/gnocchi.conf \
-           --namespace gnocchi \
-           --namespace oslo.db \
-           --namespace oslo.log \
-           --namespace oslo.policy \
-           --namespace keystonemiddleware.auth_token
+commands = {toxinidir}/generate-config-file.sh
 
 [testenv:docs]
 setenv = GNOCCHI_TEST_STORAGE_DRIVER=file
