Cover and correct unicode handling in mod_wsgi setup
On some setups the default encoding that will be present in the
Python running under mod_wsgi will not be UTF-8 compatible and will
cause errors when decoding headers in the WSGI environment.

This changes the apache config template to force the mod wsgi to use
UTF-8 thus allowing werkzeug to properly decode URIs which are
urlquoted version of utf-8 encoded strings.

Change-Id: I6f470f8ab311f8debd1758840dd74b056abbc9ea

--- a/gnocchi/tests/gabbi/gabbits-live/live.yaml
+++ b/gnocchi/tests/gabbi/gabbits-live/live.yaml
@@ -23,3 +23,25 @@ tests:
           content-type: /application/json/
       response_strings:
           - "[]"
+
+    - name: post unicode archive policy
+      url: /v1/archive_policy
+      method: POST
+      request_headers:
+          content-type: application/json
+          x-roles: admin
+      data:
+          name: ✔éñ☃
+          definition:
+              - granularity: 1 minute
+                points: 20
+      status: 201
+      response_headers:
+          location: $SCHEME://$NETLOC/v1/archive_policy/%E2%9C%94%C3%A9%C3%B1%E2%98%83
+      response_json_paths:
+          name: ✔éñ☃
+
+    - name: get unicode archive policy
+      url:  $LOCATION
+      response_json_paths:
+          $.name: ✔éñ☃
