Change the type of flavor_id from int to string.
Change-Id: I0ca5223caefbd06b7990e0b7c6b71e69bc1d6957

--- a/doc/source/rest.yaml
+++ b/doc/source/rest.yaml
@@ -190,7 +190,7 @@
       "project_id": "BD3A1E52-1C62-44CB-BF04-660BD88CD74D",
       "started_at": "2014-01-02 23:23:34",
       "ended_at": "2014-01-04 10:00:12",
-      "flavor_id": 2,
+      "flavor_id": "2",
       "image_ref": "http://image",
       "host": "compute1",
       "display_name": "myvm",
@@ -252,7 +252,7 @@
       "id": "AB0B5802-E79B-4C84-8998-9237F60D9CAE",
       "user_id": "BD3A1E52-1C62-44CB-BF04-660BD88CD74D",
       "project_id": "BD3A1E52-1C62-44CB-BF04-660BD88CD74D",
-      "flavor_id": 2,
+      "flavor_id": "2",
       "image_ref": "http://image",
       "host": "compute1",
       "display_name": "myvm",
@@ -309,7 +309,7 @@
       "id": "6F24EDD9-5A2F-4592-B708-FFBED821C5D2",
       "user_id": "BD3A1E52-1C62-44CB-BF04-660BD88CD74D",
       "project_id": "BD3A1E52-1C62-44CB-BF04-660BD88CD74D",
-      "flavor_id": 2,
+      "flavor_id": "2",
       "image_ref": "http://image",
       "host": "compute1",
       "display_name": "myvm2",
@@ -326,7 +326,7 @@
       "id": "15e9c872-7ca9-11e4-a2da-2fb4032dfc09",
       "user_id": "BD3A1E52-1C62-44CB-BF04-660BD88CD74D",
       "project_id": "BD3A1E52-1C62-44CB-BF04-660BD88CD74D",
-      "flavor_id": 2,
+      "flavor_id": "2",
       "image_ref": "http://image",
       "host": "compute1",
       "display_name": "myvm2",
