--- a/gnocchi/tests/gabbi/gabbits/resource.yaml
+++ b/gnocchi/tests/gabbi/gabbits/resource.yaml
@@ -171,7 +171,7 @@ tests:
           id: 75C44741-CC60-4033-804E-2D3098C7D2E9
           user_id: 0fbb2314-8461-4b1a-8013-1fc22f6afc9c
           project_id: f3d41b77-0cc1-4f0b-b94a-1d5be9c0e3ea
-          flavor_id: 2
+          flavor_id: "2"
           image_ref: http://image
           host: compute1
           display_name: myvm
@@ -366,7 +366,7 @@ tests:
           id: 85C44741-CC60-4033-804E-2D3098C7D2E9
           user_id: 0fbb2314-8461-4b1a-8013-1fc22f6afc9c
           project_id: f3d41b77-0cc1-4f0b-b94a-1d5be9c0e3ea
-          flavor_id: 2
+          flavor_id: "2"
           image_ref: http://image
           host: compute3
           display_name: myvm2
@@ -385,7 +385,7 @@ tests:
           id: 85C44741-CC60-4033-804E-2D3098C7D2E9
           user_id: 0fbb2314-8461-4b1a-8013-1fc22f6afc9c
           project_id: f3d41b77-0cc1-4f0b-b94a-1d5be9c0e3ea
-          flavor_id: 2
+          flavor_id: "2"
           image_ref: http://image
           host: compute3
           display_name: myvm2
@@ -405,7 +405,7 @@ tests:
           id: d13982cb-4cce-4f84-a96e-7581be1e599c
           user_id: 0fbb2314-8461-4b1a-8013-1fc22f6afc9c
           project_id: f3d41b77-0cc1-4f0b-b94a-1d5be9c0e3ea
-          flavor_id: 2
+          flavor_id: "2"
           image_ref: http://image
           host: compute3
           display_name: myvm2
@@ -437,7 +437,7 @@ tests:
           content-type: application/json
       data:
           id: 85C44741-CC60-4033-804E-2D3098C7D2E9
-          flavor_id: 2
+          flavor_id: "2"
           image_ref: http://image
           host: compute3
           display_name: myvm2
@@ -471,7 +471,7 @@ tests:
           id: 95C44741-CC60-4033-804E-2D3098C7D2E9
           user_id: 0fbb2314-8461-4b1a-8013-1fc22f6afc9c
           project_id: f3d41b77-0cc1-4f0b-b94a-1d5be9c0e3ea
-          flavor_id: 2
+          flavor_id: "2"
           image_ref: http://image
           host: compute3
           display_name: myvm2
